name: reforest
version: 0.1.0.0
license: MIT
author: Gabriel Ebner
maintainer: gebner@gebner.org
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    Reforest.Parser,
    Reforest.Grammar,
    Reforest.Compression,
    Reforest
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base >=4.7 && <4.9, containers, parsec

executable demo
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: ../Demo.hs
  build-depends: base >=4.7 && <4.9, containers, parsec

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: Haskell2010
  main-is: Spec.hs
  build-depends: base == 4.*, reforest, hspec == 2.*, containers, HUnit
